--- a/config.json
+++ b/config.json
@@ -6,15 +6,15 @@
     "BOTNAME": " 💢 ",
     "AMDIN_NAME": "Trần Danh Thọ",
     "keyRent": "Lunar",
-    "FACEBOOK_ADMIN": "https://facebook.com/tdt29082008",
+    "FACEBOOK_ADMIN": "https://facebook.com/100066705560881",
     "PREFIX": "/",
     "box_admin": "",
     "ADMINBOT": [
-        "tdt29082008",
+        "100066705560881",
         ""
     ],
     "NDH": [
-        "tdt29082008",
+        "100066705560881",
         ""
     ],
     "autoCleanCache": {
